kubernetes/frontend/ingress.yaml
#---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: frontend
#  namespace: default
#  annotations:
#    ingress.alb.yc.io/subnets: e9b7jsdnk1e2i55sk2hn,e9bso2lt7adp4ucuuo1p
#    ingress.alb.yc.io/external-ipv4-address: 158.160.44.104
#    ingress.alb.yc.io/group-name: "momo-node-group"
#spec:
#  tls:
#  - secretName: yc-certmgr-cert-id-fpqh2jbuugnnnko9cv4o
#    hosts:
#    - "kyn07c0.ru"  
#  rules:
#  - host: "kyn07c0.ru"
#    http:
#      paths:
#      - path: /
#        pathType: Prefix
#        backend:
#          service:
#            name: frontend
#            port:
#              number: 80


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
      - kyn07c0.ru
      secretName: letsencrypt
  rules:
    - host: kyn07c0.ru
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend
              port:
                number: 80
